# cfd_solver_for_science

./: .mcp.json  CMakeLists.txt  README.md  SPEC.md
ai/: CMakeLists.txt  main.c  main.py
core/: model_loader.cpp  model_loader.hpp  physics_bridge.cpp  physics_bridge.h  physics_engine.cpp  physics_engine.hpp
cpp/: CMakeLists.txt
cpp/.cache/clangd/index/: application.cpp.DCD2EAA93C3BA404.idx  application.hh.7F46221513DDA026.idx  atmosphere.cpp.B297A5C2B2AEFCAD.idx  atmosphere.hh.975FB65D629B4577.idx  camera.cpp.AF20A0D6333CA620.idx  camera.hh.CAB0223242682C74.idx  contours.cpp.B8E152B979D8E3AA.idx  contours.hh.F47F13A2BBB1EE05.idx  force_arrows.cpp.F3F7B6DB905C7DB6.idx  force_arrows.hh.C83AFB191CA30BD4.idx  forces.cpp.9C4B17723FCEF8B1.idx  forces.hh.403766B3424592CB.idx  gl_functions.cpp.3D3B01B48A347E22.idx  gl_functions.hh.54F9DB255CEDC01C.idx  heat_transfer.cpp.A311FDCFDC563142.idx  heat_transfer.hh.66EB69E7C9E776F9.idx  logger.hh.A254BFC02BEB2B47.idx  main.cpp.E2039E7D653A2B44.idx  math.hh.6AE6971244EC6740.idx  mesh.cpp.81DF39856CC9A567.idx  mesh.hh.5E04A776A0A0C651.idx  renderer.cpp.1ABB2486AFF80119.idx  renderer.hh.54EFB47CA790AEE5.idx  scene.cpp.0930438AE37D0F84.idx  scene.hh.059D16A25B1B4492.idx  scramjet_geometry.cpp.6C62B505373657D4.idx  scramjet_geometry.hh.778312BE86854693.idx  shader.cpp.C610A4B6E19B2C67.idx  shader.hh.2E64B63AC1704F9A.idx  streamlines.cpp.4263F9D044EB93F3.idx  streamlines.hh.443728F4D90C6566.idx  ui_manager.cpp.449B63CAEE446DF6.idx  ui_manager.hh.19274242F87FD1A8.idx  units.cpp.33E525810BB98B57.idx  units.hh.6D621A0C42284C6C.idx
cpp/include/app/: application.hh  scene.hh
cpp/include/geometry/: scramjet_geometry.hh
cpp/include/physics/: atmosphere.hh  forces.hh  heat_transfer.hh  units.hh
cpp/include/rendering/: camera.hh  gl_functions.hh  gl_loader.hh  mesh.hh  renderer.hh  shader.hh
cpp/include/ui/: ui_manager.hh
cpp/include/utils/: logger.hh  math.hh
cpp/include/visualization/: contours.hh  force_arrows.hh  streamlines.hh
cpp/src/: main.cpp
cpp/src/app/: application.cpp  scene.cpp
cpp/src/geometry/: scramjet_geometry.cpp
cpp/src/physics/: atmosphere.cpp  forces.cpp  heat_transfer.cpp  units.cpp
cpp/src/rendering/: camera.cpp  gl_functions.cpp  mesh.cpp  renderer.cpp  shader.cpp
cpp/src/ui/: ui_manager.cpp
cpp/src/visualization/: contours.cpp  force_arrows.cpp  streamlines.cpp
gui/: CMakeLists.txt  main.c
scramjet/: CMakeLists.txt  main.c  scramjet_config.c  scramjet_config.h
solver/: CMakeLists.txt  cfd_solver.c  cfd_solver.h  main.c
solver/physics/: atmosphere.c  atmosphere.h  forces.c  forces.h  heat_transfer.c  heat_transfer.h
src/: cfd_app.c  cfd_app.h  main.c
src/models/: mesh.h  model_manager.c  model_manager.h  obj_loader.h  stl_loader.h
src/physics/: atmosphere.c  atmosphere.h  forces.c  forces.h  heat_transfer.c  heat_transfer.h  units.c  units.h
src/ui/: control_panel.c  control_panel.h  gui_framework.c  gui_framework.h  main_window.c  main_window.h  menu_bar.c  menu_bar.h  object_browser.c  object_browser.h  properties_panel.c  properties_panel.h  status_bar.h  toolbar.c  toolbar.h
src/utils/: logger.h  math_utils.h
src/viewport/: camera.h  gl_viewport.h  mesh_renderer.h  shader.h  viewport_3d.c  viewport_3d.h
src/viz/: colormap.h  contour.h  force_arrows.h  streamlines.h  vectors.h
tui/: CMakeLists.txt  main.c
visualization/: CMakeLists.txt  main.c
